refactor: use getFirst instead of get(0) for single result retrieval in SqlQuery